DELETE request & Added 404 page

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,15 @@ a {
   padding: 20px;
 }
 
+.blog-details button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
 /* blog previews / list */
 .blog-preview {
   padding: 10px 16px;
